<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World!</string>
    <string name="app_name">Proxy</string>
    
    <string name="warn_dialog_title">提醒</string>
    <string name="button_check">查看</string>
    <string name="button_close">关闭</string>
    <string name="btn_login">登录</string>
    <string name="btn_register">注册</string>
    
    <string name="cancel">取消</string>
    
    <string name="notification_title">提醒</string>
    <string name="large_space_tip_title">提醒</string>
    <string name="large_space_tip">存储空间太大</string>
    
    <string name="txt_username">用户名</string>
    <string name="txt_password">密码</string>
    <string name="txt_password_again">确认密码</string>
    <string name="txt_phone">手机号码</string>
    <string name="txt_last_name">姓</string>
    <string name="txt_first_name">名</string>
    <string name="txt_illegal_username_password">用户名或密码不符合规范</string>
    <string name="txt_diff_password">两次密码不一致</string>
    <string name="txt_btn_view_request">查看缓存Request</string>
    <string name="txt_btn_view_response">查看缓存Response</string>
    <string name="txt_btn_view_messages">查看Messages</string>
    <string name="txt_remember_password">记住密码</string>
    
    <string name="title_login">登录</string>
    <string name="title_register">注册</string>
    <string name="title_webservice">WebserviceTest</string>
    <string name="title_cachetest">CacheTest</string>
    <string name="title_request_activity">RequestActivity</string>
    <string name="title_response_activity">ResponseActivity</string>
    <string name="title_message_activity">MessageActivity</string>
    
    <string name="empty"></string>
</resources>
