<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320px"
    android:layout_height="480px"
    android:orientation="vertical"
    android:isScrollContainer="true">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="50dip"
        android:layout_weight="1"
        android:layout_alignParentTop="true">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingLeft="5px"
            android:paddingRight="5px"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txv_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_username"
                android:textColor="@android:color/black"
                android:textAppearance="?android:attr/textAppearanceSmall"/>
            <EditText
                android:id="@+id/reg_username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:maxLength="200"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_password"
                android:textColor="@android:color/black"
                android:textAppearance="?android:attr/textAppearanceSmall"/>
            <EditText
                android:id="@+id/reg_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:password="true"
                android:singleLine="true"
                android:maxLength="200"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_password_again"
                android:textColor="@android:color/black"
                android:textAppearance="?android:attr/textAppearanceSmall"/>
            <EditText
                android:id="@+id/reg_password2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:password="true"
                android:singleLine="true"
                android:maxLength="200"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_phone"
                android:textColor="@android:color/black"
                android:textAppearance="?android:attr/textAppearanceSmall"/>
            <EditText
                android:id="@+id/reg_phone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:phoneNumber="true"
                android:maxLength="200"/>
            <!--  TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_last_name"
                android:textColor="@android:color/black"
                android:textAppearance="?android:attr/textAppearanceSmall"/>
            <EditText
                android:id="@+id/last_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:maxLength="200"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_first_name"
                android:textColor="@android:color/black"
                android:textAppearance="?android:attr/textAppearanceSmall"/>
            <EditText
                android:id="@+id/first_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:maxLength="200"/--> 
        </LinearLayout>
    </ScrollView>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="false">
        <Button
            android:id="@+id/btn_register"
            android:layout_width="fill_parent"
            android:layout_height="50px"
            android:layout_weight="0.5"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white"
            android:text="@string/btn_register"
            android:background="@drawable/btn_bg"/>
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="fill_parent"
            android:layout_height="50px"
            android:layout_weight="0.5"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white"
            android:text="@string/cancel"
            android:background="@drawable/btn_bg"/>
    </LinearLayout>
</RelativeLayout>

